# Myoso

./: .gitignore  Cargo.toml  README.md  export.json  flashcards.db  install.ps1  install.sh  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/vmargb/myoso/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/decks/: sample.md
app/src/main/java/com/vmargb/myoso/: MainActivity.kt
app/src/main/java/com/vmargb/myoso/data/: AppDatabase.kt  CardDao.kt  CardEntity.kt  CardRepository.kt  CitationDao.kt  CitationEntity.kt  Converters.kt  DeckDao.kt  DeckEntity.kt  DeckMarkdownParser.kt  DeckRepository.kt  NoteDao.kt  NoteEntity.kt  NoteRepository.kt  ReviewHistoryDao.kt  ReviewHistoryEntity.kt
app/src/main/java/com/vmargb/myoso/io/: BackupManager.kt  DeckExporter.kt  FileChooserDialog.kt  ImportExportScreen.kt
app/src/main/java/com/vmargb/myoso/scheduling/: Scheduler.kt
app/src/main/java/com/vmargb/myoso/session/: SessionCreationDialog.kt  SessionManager.kt
app/src/main/java/com/vmargb/myoso/viewmodel/: CardViewModel.kt  DeckViewModel.kt  ImportExportViewModel.kt  NotesViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/vmargb/myoso/: ExampleUnitTest.kt
app/src/test/java/com/vmargb/myoso/data/: CardDaoTest.kt  DeckDaoTest.kt  DeckMarkdownParserTest.kt  NoteDaoTest.kt  ReviewHistoryDaoTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: db.rs  main.rs  markdown.rs  models.rs  scheduler.rs  ui.rs
(+14 files in other folders)
