[package]
name = "myoso"
version = "0.3.2"
edition = "2021"
description = "Multi-step spaced-repetition flashcards in the terminal"

[[bin]]
name = "myoso"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
# TUI
ratatui    = "0.28"
crossterm  = "0.28"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Serialisation (JSON export)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# UUID v4 for record IDs
uuid = { version = "1", features = ["v4"] }
# Ergonomic error handling
anyhow = "1"
rfd = "0.14"
# Open in external edtiro
edit = "0.1"
# markdown + code blocks support
pulldown-cmark = "0.12"
syntect = "5"
